--- a/lan_clients/package.ini
+++ b/lan_clients/package.ini
@@ -1,9 +1,9 @@
 [lan_clients]
 uuid = 8a7f79cb-b11b-44bc-bd33-0f4ab3f06d60
 vendor = Cradlepoint
-notes = Put lan clients in desc to sync to NCM
-version_major = 0
-version_minor = 8
+notes = Put lan clients in Asset Identifier field sync to NCM (runs every 90 seconds)
+version_major = 1
+version_minor = 0
 auto_start = true
 restart = true
 reboot = true
